fixed alignment issue on thumbs

--- a/style.css
+++ b/style.css
@@ -115,13 +115,14 @@ border-width:3px;
 }
 
 .proj-thumb-cont{
-  border:1px dashed red;
+  width:200px;
+  margin: 0 auto;
 }
 
 @media only screen and (min-width: 1000px)
 {
   #project-grid{
-    grid-template-columns:auto auto auto;
-    grid-template-rows:auto auto;
+    grid-template-columns:repeat(3, 300px);
+    grid-template-rows:repeat(2, 300px);
   }
 }
